<resources>
    <string name="app_name">News App</string>
    <string name="welcome_to_news_app">Welcome To News App</string>
    <string name="general">GENERAL</string>
    <string name="business">BUSINESS</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="health">HEALTH</string>
    <string name="science">SCIENCE</string>
    <string name="sports">SPORTS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="search_news">Search News</string>
</resources>