<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/white_bg"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/welcomeTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/welcome_to_news_app"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_margin="4dp"
        android:layout_below="@+id/welcomeTXT">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/searchView"
                app:backgroundTint="@color/black"
                app:queryHint="@string/search_news"/>
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:layout_margin="6dp"
                android:text="@string/general"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2"
                android:layout_margin="6dp"
                android:text="@string/business"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn3"
                android:layout_margin="6dp"
                android:text="@string/entertainment"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn4"
                android:layout_margin="6dp"
                android:text="@string/health"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn5"
                android:layout_margin="6dp"
                android:text="@string/science"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn6"
                android:layout_margin="6dp"
                android:text="@string/sports"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn7"
                android:layout_margin="6dp"
                android:text="@string/technology"
                android:textColor="@color/black"
                android:backgroundTint="@color/bgm"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>

    </HorizontalScrollView>
    
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/progressBar"
        android:layout_below="@+id/horizontalScrollView"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv"
        android:layout_below="@id/progressBar"
        android:layout_marginTop="4dp"
        android:padding="2dp"
        />

  </RelativeLayout>